1998-04-22  Thomas E. Dickey  <dickey@clark.net>

	* src/checkin/src/checkin.c: HP-UX 9.x doesn't have setegid()

1998-02-02  Thomas E. Dickey  <dickey@clark.net>

	* mkdirs.sh: resync with my-autoconf

1997-09-28  Thomas E. Dickey  <dickey@clark.net>

	* makefile.in, bin/makefile.in, certify/makefile.in, src/baseline/makefile.in, src/checkin/makefile.in, src/checkout/makefile.in, src/checkup/makefile.in, src/copy/makefile.in, src/link2rcs/makefile.in, src/makefile.in, src/permit/makefile.in, src/vcs/makefile.in, support/makefile.in, user/makefile.in, src/baseline/src/makefile.in, src/baseline/test/makefile.in, src/checkin/src/makefile.in, src/checkin/test/makefile.in, src/checkout/src/makefile.in, src/checkout/test/makefile.in, src/checkup/src/makefile.in, src/checkup/test/makefile.in, src/copy/src/makefile.in, src/copy/test/makefile.in, src/link2rcs/src/makefile.in, src/link2rcs/test/makefile.in, src/permit/src/makefile.in, src/permit/test/makefile.in, src/vcs/src/makefile.in, src/vcs/test/makefile.in:
	fix:sources-rule

1997-09-14  Thomas E. Dickey  <dickey@clark.net>

	* user/link2rcs.man: -o option.

	* user/checkup.man: -a shows binary files too

	* user/copy.man: -U option

	* user/baseline.man, user/checkin.man, user/checkout.man, user/checkup.man, user/copy.man, user/ded.man, user/link2rcs.man, user/permit.man, user/rcsget.man, user/rcsput.man, user/vcs.man:
	my-email-address

	* user/makefile.in: renamed run_tests to run_test

	* src/vcs/test/run_test.sh, src/permit/test/case0.sh:
	renamed Makefile to makefile.in

	* src/link2rcs/test/case2.sh:
	add verbose option to partially match old results

	* src/link2rcs/test/case2.ref: add -v messages

	* src/link2rcs/test/case1.ref: new output shows a summary

	* src/copy/test/run_test.sh: rename Makefile to makefile.in

	* src/checkup/test/run_test.sh, src/checkout/test/run_test.sh:
	change Makefile to makefile.in

	* src/baseline/test/run_test.sh:
	mods for change of Makefile to makefile.in
